--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@heroicons/react": "^2.1.1",
     "@nextui-org/react": "^2.2.10",
+    "@prisma/client": "^5.11.0",
     "framer-motion": "^11.0.14",
     "next": "14.1.3",
     "react": "^18",
