--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@prisma/client": "^5.11.0",
     "framer-motion": "^11.0.14",
     "next": "14.1.3",
+    "next-auth": "^5.0.0-beta.15",
     "react": "^18",
     "react-dom": "^18"
   },
