--- a/package.json
+++ b/package.json
@@ -10,11 +10,17 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.1.1",
+    "@lucia-auth/adapter-prisma": "^4.0.1",
     "@nextui-org/react": "^2.2.10",
+    "@node-rs/argon2": "^1.8.0",
+    "@node-rs/bcrypt": "^1.10.1",
     "@prisma/client": "^5.11.0",
+    "arctic": "^1.2.1",
     "framer-motion": "^11.0.14",
+    "lucia": "^3.1.1",
     "next": "14.1.3",
     "next-auth": "^5.0.0-beta.15",
+    "oslo": "^1.1.3",
     "react": "^18",
     "react-dom": "^18"
   },
