--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.1.1",
+    "next-auth": "^5.0.0-beta.4",
     "@nextui-org/react": "^2.2.10",
     "@prisma/client": "^5.11.0",
     "framer-motion": "^11.0.14",
