--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.1.1",
-    "next-auth": "^5.0.0-beta.4",
     "@nextui-org/react": "^2.2.10",
     "@prisma/client": "^5.11.0",
+    "axios": "^1.6.8",
+    "cheerio": "^1.0.0-rc.12",
     "framer-motion": "^11.0.14",
     "next": "14.1.3",
+    "next-auth": "^5.0.0-beta.4",
     "react": "^18",
     "react-dom": "^18"
   },
