--- a/package.json
+++ b/package.json
@@ -10,15 +10,17 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.1.1",
-    "next-auth": "^5.0.0-beta.4",
     "@nextui-org/react": "^2.2.10",
     "@prisma/client": "^5.11.0",
+    "bcrypt": "^5.1.1",
     "framer-motion": "^11.0.14",
     "next": "14.1.3",
+    "next-auth": "^5.0.0-beta.4",
     "react": "^18",
     "react-dom": "^18"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/node": "^20.11.28",
     "@types/react": "^18",
     "@types/react-dom": "^18",
