--- a/package.json
+++ b/package.json
@@ -12,15 +12,16 @@
     "@heroicons/react": "^2.1.1",
     "@nextui-org/react": "^2.2.10",
     "@prisma/client": "^5.11.0",
-    "bcrypt": "^5.1.1",
     "axios": "^1.6.8",
+    "bcrypt": "^5.1.1",
     "cheerio": "^1.0.0-rc.12",
     "framer-motion": "^11.0.14",
     "next": "14.1.3",
     "next-auth": "^5.0.0-beta.4",
     "next-cloudinary": "^6.3.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-web-share": "^2.0.2"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
