--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "@heroicons/react": "^2.1.1",
     "@nextui-org/react": "^2.2.10",
     "@prisma/client": "^5.11.0",
-    "bcrypt": "^5.1.1",
     "axios": "^1.6.8",
+    "bcrypt": "^5.1.1",
     "cheerio": "^1.0.0-rc.12",
     "framer-motion": "^11.0.14",
     "next": "14.1.3",
@@ -31,6 +31,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.1.3",
     "postcss": "^8",
+    "prisma": "^5.11.0",
     "tailwindcss": "^3.3.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.2"
