--- a/package.json
+++ b/package.json
@@ -11,20 +11,25 @@
   "dependencies": {
     "@heroicons/react": "^2.1.1",
     "@nextui-org/react": "^2.2.10",
+    "@node-rs/argon2": "^1.8.0",
+    "@node-rs/bcrypt": "^1.10.1",
     "@prisma/client": "^5.11.0",
     "axios": "^1.6.8",
     "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "cheerio": "^1.0.0-rc.12",
     "framer-motion": "^11.0.14",
     "next": "14.1.3",
     "next-auth": "^5.0.0-beta.4",
     "next-cloudinary": "^6.3.0",
+    "oslo": "^1.1.3",
     "react": "^18",
     "react-dom": "^18",
     "react-web-share": "^2.0.2"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
+    "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20.11.28",
     "@types/react": "^18",
     "@types/react-dom": "^18",
