--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "next": "14.1.3",
     "next-auth": "^5.0.0-beta.4",
     "next-cloudinary": "^6.3.0",
+    "pexels": "^1.4.0",
     "react": "^18",
     "react-dom": "^18",
     "react-web-share": "^2.0.2"
