--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "next-cloudinary": "^6.3.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-toastify": "^10.0.5",
     "react-web-share": "^2.0.2"
   },
   "devDependencies": {
