feat: Sentry error logging with source upload support

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@node-rs/argon2": "^1.8.0",
     "@node-rs/bcrypt": "^1.10.1",
     "@prisma/client": "^5.11.0",
+    "@sentry/nextjs": "^7.105.0",
     "axios": "^1.6.8",
     "bcryptjs": "^2.4.3",
     "cheerio": "^1.0.0-rc.12",
