--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.1.1",
+    "@lottiefiles/react-lottie-player": "^3.5.3",
     "@nextui-org/react": "^2.2.10",
     "@node-rs/argon2": "^1.8.0",
     "@node-rs/bcrypt": "^1.10.1",
