--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "next": "14.1.3",
     "next-auth": "^5.0.0-beta.4",
     "next-cloudinary": "^6.3.0",
+    "next-themes": "^0.3.0",
     "pexels": "^1.4.0",
     "react": "^18",
     "react-dom": "^18",
